# -oracle-node

./: .gitignore  Cargo.toml  README.md
aggregator-server/: Cargo.toml  build.rs
aggregator-server/src/: main.rs
common/: Cargo.toml
common/src/: crypto.rs
scripts/: run_multi_nodes.sh
src/: binance.rs  coinbase.rs  main.rs
