[package]
name = "oracle-node"
version = "0.1.0"
edition = "2021"
authors = ["BTCFi Team"]
license = "MIT"
description = "BTC Oracle Node for real-time price aggregation"
repository = "https://github.com/yourusername/oracle-node"

[[bin]]
name = "oracle-node"
path = "src/main.rs"

[dependencies]
oracle-vm-common = { path = "common" }
rust_decimal = "1.33"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time  
chrono = { version = "0.4", features = ["serde", "std"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Crypto
secp256k1 = { version = "0.28", features = ["rand-std"] }

# Config
toml = "0.8"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
proptest = "1.4"
mockall = "0.12"
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.12"