[package]
name = "aggregator-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "aggregator-server"
path = "src/main.rs"