[package]
name = "oracle-vm-common"
version = "0.1.0"
edition = "2021"
authors = ["BTCFi Team"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
secp256k1 = { version = "0.28", features = ["rand-std"] }
bitcoin = { version = "0.31", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
proptest = "1.4"